--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -6,6 +6,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Name:</label>
                 <%= f.text_field :name, class: 'form-control', placeholder: 'Device Name Here', required: true %>
               </div>
             </div>
@@ -13,6 +14,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Id Code:</label>
                 <%= f.text_field :id_code, class: 'form-control', placeholder: 'Device ID Code Here', required: true %>
               </div>
             </div>
@@ -20,6 +22,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Id Communication:</label>
                 <%= f.text_field :id_communication, class: 'form-control', placeholder: 'Device ID Communication Here', required: true %>
               </div>
             </div>
@@ -27,6 +30,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Location:</label>
                 <%= f.text_field :location, class: 'form-control', placeholder: 'Device location Here', required: true %>
               </div>
             </div>
@@ -34,6 +38,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Latitude:</label>
                 <%= f.text_field :latitude, class: 'form-control', placeholder: 'Device latitude Here', required: true %>
               </div>
             </div>
@@ -41,6 +46,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Longitude:</label>
                 <%= f.text_field :longitude, class: 'form-control', placeholder: 'Device longitude Here', required: true %>
               </div>
             </div>
@@ -48,6 +54,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Altitude:</label>
                 <%= f.text_field :altitude, class: 'form-control', placeholder: 'Device altitude Here', required: true %>
               </div>
             </div>
@@ -55,6 +62,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Date Installed:</label>
                 <%= f.text_field :date_installation, class: 'form-control', placeholder: 'Device Date Installation Here', required: true %>
               </div>
             </div>
@@ -62,6 +70,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Circuit Number:</label>
                 <%= f.text_field :circuit_number, class: 'form-control', placeholder: 'Device Circuit Number Here', required: true %>
               </div>
             </div>
@@ -69,6 +78,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Name Street:</label>
                 <%= f.text_field :name_street, class: 'form-control', placeholder: 'Device Name Street Here', required: true %>
               </div>
             </div>
@@ -76,6 +86,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Number Street:</label>
                 <%= f.text_field :number_street, class: 'form-control', placeholder: 'Device Number Street Here', required: true %>
               </div>
             </div>
@@ -83,6 +94,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Power Installed:</label>
                 <%= f.text_field :power_installed, class: 'form-control', placeholder: 'Device Power Installed Here', required: true %>
               </div>
             </div>
@@ -90,6 +102,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Power Contracted:</label>
                 <%= f.text_field :power_contracted, class: 'form-control', placeholder: 'Device Power Contracted Here', required: true %>
               </div>
             </div>
@@ -97,6 +110,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Id Supply Contract:</label>
                 <%= f.text_field :id_supply_contract, class: 'form-control', placeholder: 'Deviceid Supply Contract Here', required: true %>
               </div>
             </div>
@@ -104,6 +118,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>lock Brand:</label>
                 <%= f.text_field :clock_brand, class: 'form-control', placeholder: 'Device Clock Brand Here', required: true %>
               </div>
             </div>
@@ -111,6 +126,7 @@
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
+                <label>Clock Model:</label>
                 <%= f.text_field :clock_model, class: 'form-control', placeholder: 'Device Clock Model Here', required: true %>
               </div>
             </div>
