--- a/app/views/devices/_get_all_devices.html.erb
+++ b/app/views/devices/_get_all_devices.html.erb
@@ -24,7 +24,7 @@
                           <td><%= device.id_code %></td>
                           <td><%= device.id_communication %></td>
                           <td><%= device.date_installation %></td>
-                          <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %>
+                          <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id), remote: true %>
                              <%= link_to image_tag('delete-icon.svg'), device_path(device.id), :method => :delete , data: { confirm: 'Are you sure?'} %> 
                             
                              <!-- <a data-target="#delete_action_Modal" data-toggle="modal" >
