--- a/app/views/devices/get_device.js.erb
+++ b/app/views/devices/get_device.js.erb
@@ -1,1 +1,1 @@
-$('#div_id').html("<%= escape_javascript(render :partial => 'get_all_devices') %>");
+$('#devices').html("<%= escape_javascript(render :partial => 'get_all_devices') %>");
