--- a/app/views/devices/_create_button.html.erb
+++ b/app/views/devices/_create_button.html.erb
@@ -1,5 +1,9 @@
- <ul class="nav nav-tabs" role="tablist">
-	<button type="button" class="btn btn-link btn-md" data-toggle="modal" data-target="#">MQTT</button>
-    <%= link_to "Device", get_device_path, :remote => true %>
-</ul> 
+<div class="middle-container">
+    <div class="col-md-12 col-md-12">
+        <ul class="nav nav-tabs" role="tablist">
+			<button type="button" class="btn btn-link btn-md" data-toggle="tab" data-target="#">MQTT</button>
+    		<%= link_to "Device", get_device_path, :remote => true , "data-toggle" => "tab"%>
+		</ul>
+    </div>
+</div> 
 		
