--- a/app/views/devices/_get_all_devices.html.erb
+++ b/app/views/devices/_get_all_devices.html.erb
@@ -38,22 +38,11 @@
                 </div>
               </div>
             </div>
-            <%= button_to 'Create a Device', create_device_path, method: :get, remote: true,  class: "btn btn-success btn-right" %>
+            <%= button_to 'Create a Device', create_device_path, method: :get, remote: true,  class: "btn submit-btn-green device-submit btn-right" %>
           </div>
     </div>
     <% else %>
       <div class="col-xs-12 col-sm-12">
-        <div class="panel-box">
-          <div class="row">
-            <div class="col-sm-12"></div>
-            <div class="col-sm-12"></div>
-            <div class="col-sm-12">
-              <%= button_to 'Create a Device', new_device_path, method: :get, class: "btn btn-success btn-right" %>
-            </div>
-          </div>
-        </div>
-      </div>      
-  
-    <% end %> 
-
-  </div>
+          <%= button_to 'Create a Device', new_device_path, method: :get, class: "btn btn-success btn-right" %>
+      </div>
+    <% end %>
