--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -1,4 +1,11 @@
-<div class="panel-box">
+<% if @device.errors.any? %>
+      <div class="alert alert-danger">
+            There were some errors:
+             <% @device.errors.full_messages.each do |message| %>
+          <li class="red"><%= message %></li>
+          <% end %>
+      </div>
+  <% end %><div class="panel-box">
   <div class="panel-head"></div>
   <div class="dc-management-form">
     <%= form_for(device, html: {class: 'form-horizontal', multipart: true}) do |f| %>
@@ -39,7 +46,8 @@
             <div class="row">
               <div class="col-xs-12 mb-15">
                 <label>Latitude:</label>
-                <%= f.text_field :latitude, class: 'form-control', placeholder: 'Device latitude Here', required: true %>
+                <%= f.text_field :latitude, class: 'form-control', id: 'latitude', placeholder: 'Device latitude Here', required: true %>
+              <span id="validation1" class="clearBtn"></span>
               </div>
             </div>
           </div>
@@ -47,7 +55,8 @@
             <div class="row">
               <div class="col-xs-12 mb-15">
                 <label>Longitude:</label>
-                <%= f.text_field :longitude, class: 'form-control', placeholder: 'Device longitude Here', required: true %>
+                <%= f.text_field :longitude, class: 'form-control',id: 'longitude',  placeholder: 'Device longitude Here', required: true %>
+              <span id="validation2" class="clearBtn"></span>
               </div>
             </div>
           </div>
@@ -55,7 +64,7 @@
             <div class="row">
               <div class="col-xs-12 mb-15">
                 <label>Altitude:</label>
-                <%= f.text_field :altitude, class: 'form-control', placeholder: 'Device altitude Here', required: true %>
+                <%= f.text_field :altitude, class: 'form-control', id: 'altitude',  placeholder: 'Device altitude Here', required: true %>
               </div>
             </div>
           </div>
@@ -63,7 +72,8 @@
             <div class="row">
               <div class="col-xs-12 mb-15">
                 <label>Date Installed:</label>
-                <%= f.text_field :date_installation, class: 'form-control', placeholder: 'Device Date Installation Here', required: true %>
+                 <%= f.text_field :date_installation, class: 'form-control datepicker', placeholder: 'Device altitude Here', required: true  %> 
+               
               </div>
             </div>
           </div>
@@ -141,7 +151,8 @@
                   <div class="col-xs-4"></div>
                   <div class="col-xs-4 btn-center">
                     <%= f.hidden_field :user_id, value: session[:user_id] %>
-                    <button type="submit" class="btn submit-btn-green device-submit">Submit</button>
+                    <button type="submit" class="btn submit-btn-green device-submit" id="submit">Submit</button>
+                    <span id="validation3" class="clearBtn"></span>
                   </div>
               </div>
             </div>
@@ -150,3 +161,68 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker();
+  });
+
+var text = document.getElementById('latitude');
+  text.onkeypress = text.onpaste = checkInput;
+   function checkInput(e) {
+        var e = e || event;
+        var char = e.type == 'keypress' 
+            ? String.fromCharCode(e.keyCode || e.which) 
+            : (e.clipboardData || window.clipboardData).getData('text/plain');
+           if (/[^\d+-.]/gi.test(char)) {
+               document.getElementById("validation1").innerHTML = "Only digits are allowed";
+              return false;
+              }else{
+              document.getElementById("validation1").innerHTML = "";
+              return true; } 
+      }
+
+var text = document.getElementById('longitude');
+  text.onkeypress = text.onpaste = checkInput;
+   function checkInput(e) {
+        var e = e || event;
+        var char = e.type == 'keypress' 
+            ? String.fromCharCode(e.keyCode || e.which) 
+            : (e.clipboardData || window.clipboardData).getData('Text');
+           if (/[^\d+-.]/gi.test(char)) {
+               document.getElementById("validation2").innerHTML = "Only digits are allowed";
+              return false;
+              }else{
+              document.getElementById("validation2").innerHTML = "";
+              return true; } 
+      }
+
+$(document).ready(function() {
+    $("#latitude").keyup(validateLatitude);
+    $("#longitude").keyup(validateLongitude);
+ });
+
+function validateLatitude(){
+  debugger
+  var latitude = $("#latitude").val();
+  if (latitude > 90 || latitude < -90){
+     document.getElementById("validation2").innerHTML = "Please enter a value within -90 to 90";
+     $("#submit").css('display', 'none');
+  }else{
+     document.getElementById("validation2").innerHTML = "";
+     $("#submit").show();
+  }
+};
+function validateLongitude(){
+  debugger
+  var longitude = $("#longitude").val();
+  debugger
+  if (longitude >= 180 || longitude <= -180){
+     document.getElementById("validation2").innerHTML = "";
+     $("#submit").show();
+   }else{
+       document.getElementById("validation2").innerHTML = "Please enter a value within -180 to 180";
+      $("#submit").css('display', 'none');
+  }
+};
+
+</script>
