--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -72,7 +72,7 @@
             <div class="row">
               <div class="col-xs-12 mb-15">
                 <label>Date Installed:</label>
-                 <%= f.text_field :date_installation, class: 'form-control datepicker', id: 'picker', placeholder: 'Device altitude Here', required: true  %> 
+                <%= f.text_field :date_installation, class: 'form-control datepicker', id: 'picker', placeholder: 'Device altitude Here', required: true  %> 
                
               </div>
             </div>
@@ -165,7 +165,9 @@
 <script type="text/javascript">
   
 
-  $("#picker").datepicker();
+  $("#picker").datepicker({
+    dateFormat: "dd-mm-yy"
+  });
 
 
 var text = document.getElementById('latitude');
