--- a/app/views/devices/_get_all_devices.html.erb
+++ b/app/views/devices/_get_all_devices.html.erb
@@ -2,19 +2,21 @@
 <div class="middle-container">
   <% if @devices.present? %>
     <div class="col-xs-12 col-sm-12">
-            <div class="panel-box">
-              <div class="panel-head">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
                 <h2>Devices</h2>
               </div>
-              <div class="device-detail-table">
-                <div class="table-responsive">
-                  <table id= "table-data" class="table table-striped table-responsive">
+              <div class="panel-body">
+              <div class="">
+                <div class="">
+                  <table id= "table-data"   class="table table-condensed table-striped table-bordered nowrap table-responsive" width="100% ">
                     <thead>
                       <tr>
                         <th>Device Name</th>
                         <th>Device Id Code</th>
                         <th>Device Id Communication</th>
                         <th>Device Date Installation</th>
+                        <th>Action</th>
                       </tr>
                     </thead>
                     <tbody style="height:100px;">
@@ -35,6 +37,7 @@
                   </table>
                 </div>
               </div>
+            </div>>
             </div>
             <%= button_to 'Create a Device', create_device_path, method: :get, remote: true,  class: "btn submit-btn-green device-submit btn-right" %>
       </div>
@@ -46,3 +49,13 @@
         </div>
     <% end %>
    
+   
+
+   <script type="text/javascript">
+$(document).ready(function() {
+    var table = $('#table-data').DataTable( {
+        responsive: true
+    } );
+ 
+    new $.fn.dataTable.FixedHeader( table );
+} );  </script>
