--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -212,10 +212,10 @@ function validateLatitude(){
   }else{
     if (latitude <= 90 && latitude >= 0){
      document.getElementById("validation2").innerHTML = "";
-     $("#submit").show();
+     $("#submit").removeAttr('disabled');
     }else{
      document.getElementById("validation2").innerHTML = "Please enter a value within -90 to 90";
-     $("#submit").css('display', 'none');
+     $("#submit").attr('disabled', 'disabled')
    }
   } 
 };
@@ -228,10 +228,10 @@ function validateLongitude(){
   }else{
     if (longitude <= 180 && longitude >= 0){
      document.getElementById("validation2").innerHTML = "";
-     $("#submit").show();
+     $("#submit").removeAttr('disabled');
     }else{
      document.getElementById("validation2").innerHTML = "Please enter a value within -180 to 180";
-     $("#submit").css('display', 'none');
+     $("#submit").attr('disabled', 'disabled')
    }
   } 
 };
