--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -25,7 +25,7 @@
                             Settings</a>
                     </li> -->
                     <li>
-                        <a rel="nofollow" href="/session/index">
+                        <a rel="nofollow" href="/logout">
                         <i class="fa fa-sign-out fa-fw"></i>
                         Logout
                         </a>
