--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -59,7 +59,7 @@
           </div>
           <!-- Tab panes -->
           <div class="tab-content" id="deviceTabs">
-            <%= render partial: 'device_tabs', locals: {device: @device, templates: @templates, message: @message, topic: @topic} %>
+            <%= render partial: 'device_tabs', locals: {device: @device} %>
           </div>
         </div>
       </div>
