--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,7 +2,10 @@
 @font-face {
     font-family: 'helvetica_neue_lt_std65Md';
     src: url('../assets/helveticaneueltstd-md-webfont.eot');
-    src: url('../assets/helveticaneueltstd-md-webfont.eot?#iefix');
+    src: url('../assets/helveticaneueltstd-md-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/helveticaneueltstd-md-webfont.woff') format('woff'),
+         url('../assets/helveticaneueltstd-md-webfont.ttf') format('truetype'),
+         url('../assets/helveticaneueltstd-md-webfont.svg#helvetica_neue_lt_std65Md') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -10,7 +13,10 @@
  @font-face {
     font-family: 'helvetica_neue_lt_std55_roman';
     src: url('../assets/helveticaneueltstd-roman-webfont.eot');
-    src: url('../assets/helveticaneueltstd-roman-webfont.eot?#iefix');
+    src: url('../assets/helveticaneueltstd-roman-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../assets/helveticaneueltstd-roman-webfont.woff') format('woff'),
+         url('../assets/helveticaneueltstd-roman-webfont.ttf') format('truetype'),
+         url('../assets/helveticaneueltstd-roman-webfont.svg#helvetica_neue_lt_std55_roman') format('svg');
     font-weight: normal;
     font-style: normal;
 }
