--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -9,7 +9,7 @@
             <li class="userdp dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <span class="user-profile">
-                      <img src="/assets/missing_user.png" alt="Missing user">
+                      <img src="/images/missing_user.png" alt="Missing user">
                     </span>
                     <b class="caret"></b>
                 </a>
